Cleanup the TestUtils class
Signed-off-by: Jakub Scholz <www@scholzj.com>